style: adds file preview

--- a/register-repo.html
+++ b/register-repo.html
@@ -17,7 +17,7 @@
             <nav class="menu-container">
                 <ul class="menu">
                     <li class="menu-item"><a href="./index.html">Repositórios</a></li>
-                    <li class="menu-item"><a href="./register-repo.html">Adicionar</a></li>
+                    <li class="menu-item"><a href="./register-repo.html">Adicionar Repositório</a></li>
                 </ul>
             </nav>
             <div class="menu-hamburger" id="menuToggle">
@@ -92,6 +92,7 @@
                             <input class="custom-file-input" type="file" name="image" id="image"
                                 accept="image/jpeg, image/png, image/gif, image/svg+xml, image/webp">
                         </div>
+                        <div class="file-preview"></div>
                     </div>
                     <div class="input-container">
                         <label for="demo">Demo</label>
@@ -100,6 +101,7 @@
                             <input class="custom-file-input" type="file" name="demo" id="demo"
                                 accept="image/gif, image/webp, image/apng">
                         </div>
+                        <div class="file-preview"></div>
                     </div>
                     <button type="submit">Adicionar Repositório</button>
                 </div>
@@ -109,7 +111,7 @@
     <footer>
         <p>© 2024 - Todos os direitos reservados.</p>
     </footer>
-    <script src="./js/register-repo.js"></script>
+    <script type="module" src="./js/register-repo.js"></script>
 </body>
 
 </html>
