feat: adds index js

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <h1>Repositórios</h1>
             </div>
 
-            <div class="repos-container">
-                <div class="repo">
+            <div id="repos-container">
+                <!-- <div class="repo">
                     <div class="repo__infos">
                         <a href="">
                             <h3>my-tasks</h3>
@@ -159,7 +159,7 @@
                     </span>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
 
     <footer>
