feat: adds edit-repo js

--- a/edit-repo.html
+++ b/edit-repo.html
@@ -57,7 +57,7 @@
             <div class="title-container">
                 <h1>Editar Repositório</h1>
             </div>
-            <form>
+            <form id="update-form">
                 <div class="form-left">
                     <div class="input-container">
                         <label for="name">Nome do Repositório *</label>
