refactor: renames submit button

--- a/edit-repo.html
+++ b/edit-repo.html
@@ -109,7 +109,8 @@
                         </div>
                         <button type="button" id="clear-demo">Limpar Demo</button>
                     </div>
-                    <button id="green-button" type="submit">Editar Repositório</button>
+                    <button id="submit-button" type="submit">Editar Repositório</button>
+                    <button id="delete-button" type="button">Deletar Repositório</button>
                 </div>
         </div>
         </form>
