--- a/register-repo.html
+++ b/register-repo.html
@@ -109,7 +109,7 @@
                         </div>
                         <button type="button" id="clear-demo">Limpar Demo</button>
                     </div>
-                    <button id="green-button" type="submit">Adicionar Repositório</button>
+                    <button id="submit-button" type="submit">Adicionar Repositório</button>
                 </div>
         </div>
         </form>
