feat: adds cancel button

--- a/edit-repo.html
+++ b/edit-repo.html
@@ -109,8 +109,11 @@
                         </div>
                         <button type="button" id="clear-demo">Limpar Demo</button>
                     </div>
-                    <button id="submit-button" type="submit">Editar Repositório</button>
-                    <button id="delete-button" type="button">Deletar Repositório</button>
+                    <div class="actions-container">
+                        <button id="submit-button" type="submit">Editar Repositório</button>
+                        <button id="delete-button" type="button">Deletar Repositório</button>
+                        <button id="cancel-button" type="button">Cancelar</button>
+                    </div>
                 </div>
         </div>
         </form>
