--- a/register-repo.html
+++ b/register-repo.html
@@ -109,7 +109,10 @@
                         </div>
                         <button type="button" id="clear-demo">Limpar Demo</button>
                     </div>
-                    <button id="submit-button" type="submit">Adicionar Repositório</button>
+                    <div class="actions-container">
+                        <button id="submit-button" type="submit">Adicionar Repositório</button>
+                        <button id="cancel-button" type="button">Cancelar</button>
+                    </div>
                 </div>
         </div>
         </form>
