fix: name input required

--- a/register-repo.html
+++ b/register-repo.html
@@ -61,7 +61,7 @@
                 <div class="form-left">
                     <div class="input-container">
                         <label for="name">Nome do Repositório *</label>
-                        <input type="text" name="name" id="name">
+                        <input type="text" name="name" id="name" required>
                     </div>
                     <div class="input-container">
                         <label for="description">Descrição</label>
