feat: adds pagination

--- a/index.html
+++ b/index.html
@@ -58,108 +58,14 @@
                 <h1>Repositórios</h1>
             </div>
 
-            <div id="repos-container">
-                <!-- <div class="repo">
-                    <div class="repo__infos">
-                        <a href="">
-                            <h3>my-tasks</h3>
-                        </a>
-                        <p>description description description description...</p>
-                    </div>
-                    <span class="repo__date">
-                        19 dez 2024
-                    </span>
-                </div>
-                <div class="repo">
-                    <div class="repo__infos">
-                        <a href="">
-                            <h3>my-tasks</h3>
-                        </a>
-                        <p>description description description description...</p>
-                    </div>
-                    <span class="repo__date">
-                        19 dez 2024
-                    </span>
-                </div>
-                <div class="repo">
-                    <div class="repo__infos">
-                        <a href="">
-                            <h3>my-tasks</h3>
-                        </a>
-                        <p>description description description description...</p>
-                    </div>
-                    <span class="repo__date">
-                        19 dez 2024
-                    </span>
-                </div>
-                <div class="repo">
-                    <div class="repo__infos">
-                        <a href="">
-                            <h3>my-tasks</h3>
-                        </a>
-                        <p>description description description description...</p>
-                    </div>
-                    <span class="repo__date">
-                        19 dez 2024
-                    </span>
-                </div>
-                <div class="repo">
-                    <div class="repo__infos">
-                        <a href="">
-                            <h3>my-tasks</h3>
-                        </a>
-                        <p>description description description description...</p>
-                    </div>
-                    <span class="repo__date">
-                        19 dez 2024
-                    </span>
-                </div>
-                <div class="repo">
-                    <div class="repo__infos">
-                        <a href="">
-                            <h3>my-tasks</h3>
-                        </a>
-                        <p>description description description description...</p>
-                    </div>
-                    <span class="repo__date">
-                        19 dez 2024
-                    </span>
-                </div>
-                <div class="repo">
-                    <div class="repo__infos">
-                        <a href="">
-                            <h3>my-tasks</h3>
-                        </a>
-                        <p>description description description description...</p>
-                    </div>
-                    <span class="repo__date">
-                        19 dez 2024
-                    </span>
-                </div>
-                <div class="repo">
-                    <div class="repo__infos">
-                        <a href="">
-                            <h3>my-tasks</h3>
-                        </a>
-                        <p>description description description description...</p>
-                    </div>
-                    <span class="repo__date">
-                        19 dez 2024
-                    </span>
-                </div>
-                <div class="repo">
-                    <div class="repo__infos">
-                        <a href="">
-                            <h3>my-tasks</h3>
-                        </a>
-                        <p>description description description description...</p>
-                    </div>
-                    <span class="repo__date">
-                        19 dez 2024
-                    </span>
-                </div>
+            <div id="repos-container"></div>
+
+            <div id="pagination-container" class="pagination">
+                <button id="prev-page" disabled>&lt;</button>
+                <span id="page-numbers"></span>
+                <button id="next-page">&gt;</button>
             </div>
-        </div> -->
+        </div>
     </main>
 
     <footer>
