--- a/index.html
+++ b/index.html
@@ -58,19 +58,7 @@
                 <div class="title-container">
                     <h1>Repositórios</h1>
                 </div>
-                <div id="repos-container">
-                    <!-- <div class="repo">
-                        <div class="repo__infos">
-                            <a href="#">
-                                <h3>teste</h3>
-                            </a>
-                            <p>teste teste teste teste teste teste</p>
-                        </div>
-                        <span class="repo__date">
-                            12 de dezembro de 2025
-                        </span>
-                    </div> -->
-                </div>
+                <div id="repos-container"></div>
             </div>
 
             <div id="pagination-container" class="pagination">
